# c-shahki

Shashe4ki/: CMakeLists.txt  main.cpp
Shashe4ki/game/: CMakeLists.txt  field.cpp  field.h  game.cpp  game.h  standardrules.cpp  standardrules.h
Shashe4ki/strategies/: CMakeLists.txt  Person_Interface.cpp  Person_Interface.h  basic_interface.h  computer_strategy_1.cpp  computer_strategy_1.h  computer_strategy_2.cpp  computer_strategy_2.h  computerlogic.cpp  computerlogic.h  field.cpp  field.h  standardrules.cpp  standardrules.h
